Put_direction_google_api_plus_bottom_fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">E.L</string>
     <string name="map_key" translatable="false">AIzaSyD0982tla5btYfpYCWfH23NRXFU7pirdWc</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
